# hello_cargo

./: .buildconfig  .gitignore  Cargo.toml  README.md  hellow_cargo.creator.user.4.8-pre1  hellow_cargo.files
src/: lib.rs
src/mathematics/: arithmetic.rs
src/resources/: words.txt
tests/: arithmetic_rspec.rs  arithmetic_tests.rs  sum.rs  sum_test.rs
