[package]
name = "hello_cargo"
version = "0.1.0"
authors = ["reynaldo <gilcu2@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
num = "*"
actix = "0.7"
futures = "0.1"
rand = "0.3.14"

#[[test]]
#name = "cucumber"
#harness = false # Allows Cucumber to print output instead of libtest
#
#[dev-dependencies]
#cucumber_rust = "^0.5.1"
