[package]
name = "hello_cargo"
version = "0.1.0"
authors = ["reynaldo <gilcu2@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
num = "*"
actix = "0.7"
futures = "0.1"
rand = "0.3.14"
rustlearn = "0.5.0"
optimization = "0.1.0"
rusty-machine="0.5.4"
vectors = "0.3.0"
vpsearch = "1.3.5"

[dev_dependencies]
rspec = "1.0.0-beta.4"



